frat(host): 添加编辑主机信息
